--- a/UrbanDjango/templates/fourth_task/second_page.html
+++ b/UrbanDjango/templates/fourth_task/second_page.html
@@ -1,5 +1,5 @@
 {% extends "fourth_task/menu.html" %}
-{% block pagename %}Главная страница{% endblock %}
+{% block pagename %}Игры{% endblock %}
 {% block content %}
     <ul>
         {% for l in games %}
