--- a/UrbanDjango/templates/fourth_task/main_page.html
+++ b/UrbanDjango/templates/fourth_task/main_page.html
@@ -1,16 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-    <h1>Главная страница</h1>
-</head>
-<menu>
-    <p><a href="/">Главная</a></p>
-    <p><a href="/second/">Магазин</a></p>
-    <p><a href="/third/">Корзина</a></p>
-</menu>
-<body>
-
-</body>
-</html>
+{% extends "fourth_task/menu.html" %}
+{% block pagename %}Главная страница{% endblock %}
