--- a/UrbanDjango/templates/fourth_task/third_page.html
+++ b/UrbanDjango/templates/fourth_task/third_page.html
@@ -1,5 +1,5 @@
 {% extends "fourth_task/menu.html" %}
-{% block pagename %}Главная страница{% endblock %}
+{% block pagename %}Корзина{% endblock %}
 {% block content %}
     <a href="/"><button><h2>Извините, ваша корзина пуста</h2></button></a>
 {% endblock %}
