--- a/UrbanDjango/templates/fourth_task/menu.html
+++ b/UrbanDjango/templates/fourth_task/menu.html
@@ -10,6 +10,8 @@
         <p><a href="/">Главная</a></p>
         <p><a href="/second/">Магазин</a></p>
         <p><a href="/third/">Корзина</a></p>
+        <p><a href="/sign_up_by_django/">Регистрация Django</a></p>
+        <p><a href="/sign_up_by_html/">Регистрация html</a></p>
     {% endblock %}
 </menu>
 
